kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finflow-frontend
  namespace: finflow
  labels:
    app: finflow-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: finflow-frontend
  template:
    metadata:
      labels:
        app: finflow-frontend
    spec:
      containers:
        - name: frontend
          # ECR URI will be dynamically updated by Jenkins. We place a placeholder here.
          image: 648471849551.dkr.ecr.us-east-1.amazonaws.com/production-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: finflow-frontend-service
  namespace: finflow
  labels:
    app: finflow-frontend
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: finflow-frontend
  type: ClusterIP
